<resources>
    <string name="app_name">ST10_FLIGHTMODE</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="osd_shadow_radius">3.0</string>
    <string name="osd_shadow_dx">1.0</string>
    <string name="osd_shadow_dy">1.0</string>
    <string name="def_camera_name">C-GO3</string>
    <string name="str_select">Select</string>
    <string name="str_start">Start</string>
    <string name="str_finish">Finish</string>
    <string name="str_save">Save</string>
    <string name="str_reset">Reset</string>
    <string name="str_edit">Edit</string>
    <string name="str_copy">Copy</string>
    <string name="str_delete">Delete</string>
    <string name="str_on">ON</string>
    <string name="str_off">OFF</string>
    <string name="str_dialog_waiting">Please wait…</string>
    <string name="str_plus">+</string>
    <string name="str_subtract">-</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_next">Next</string>
    <string name="str_retry">Retry</string>
    <string name="str_create">Create</string>
    <string name="str_import">Import</string>
    <string name="str_k1">K1</string>
    <string name="str_k2">K2</string>
    <string name="str_k3">K3</string>
    <string name="str_k4">K4</string>
    <string name="str_k5">K5</string>
    <string name="str_k6">K6</string>
    <string name="str_j1">J1</string>
    <string name="str_j2">J2</string>
    <string name="str_j3">J3</string>
    <string name="str_j4">J4</string>
    <string name="str_b1">B1</string>
    <string name="str_b2">B2</string>
    <string name="str_b3">B3</string>
    <string name="str_b4">B4</string>
    <string name="str_s1">S1</string>
    <string name="str_s2">S2</string>
    <string name="str_s3">S3</string>
    <string name="str_s4">S4</string>
    <string name="str_s5">S5</string>
    <string name="str_t1">T1</string>
    <string name="str_t2">T2</string>
    <string name="str_t3">T3</string>
    <string name="str_t4">T4</string>
    <string name="str_sending_data_dailog">Please wait a moment …</string>
    <string name="str_get_sim_state_failure">Failed to get sim state</string>
    <string name="str_clear">Clear</string>
    <string name="str_question_mark">?</string>
    <string name="greeting">Welcome, %1$s</string>
    <string name="default_transmitter_name">ST15 V1.0</string>
    <string name="str_value">%1$s %2$s</string>
    <string name="str_float_value">%1$.1f %2$s</string>
    <string name="str_float_value2">%1$.0f %2$s</string>
    <string name="str_int_value">%1$d %2$s</string>
    <string name="str_pos">%1$.4f %2$s\n%3$.4f %4$s</string>
    <string name="str_distance">Dis: %1$.1f %2$s</string>
    <string name="str_osd_pos">%1$s E %2$s N</string>
    <string name="label_gps_status">GPS</string>
    <string name="label_gps">SAT</string>
    <string name="label_vol">VOLTS</string>
    <string name="label_cur">CUR</string>
    <string name="label_fsk">FSK</string>
    <string name="label_wifi">WiFi</string>
    <string name="label_mode">MODE</string>
    <string name="label_alt">ALT</string>
    <string name="label_tas">G-SPD</string>
    <string name="label_pos">POS</string>
    <string name="label_dis">DIS</string>
    <string name="label_motor">MOTOR</string>
    <string name="label_null"></string>
    <string name="model_select">Model Select</string>
    <string name="system_function">System Settings</string>
    <string name="channel_setting">Channel Settings</string>
    <string name="flight_setting">Flight Settings</string>
    <string name="fpv_takeoff">Take Off</string>
    <string name="fpv_landing">Landing</string>
    <string name="camera_sdcard_not_inserted_title">SD was not detected</string>
    <string name="camera_sdcard_not_inserted">Camera SD card was not detected,please insert sdcard if you want to record or take picture</string>
    <string name="camera_storage_almost_full">Transfer All Files to Your Computer ASAP Before Recording Video</string>
    <string name="storage_almost_full_title">Not Enough Storage in MicroSD Card</string>
    <string name="camera_not_connected">Camera is not Connected</string>
    <string name="camera_not_connected_prompt">\t\tCamera is not connected,Do you want to fly without camera?</string>
    <string name="init_camera_failed">Failed to initialize camera</string>
    <string name="connect_camera_hint">Please connect to camera</string>
    <string name="snapshot_while_recording">you can not take pictures while recording</string>
    <string name="unable_connect_to_camera_video">Unable to connect to camera,re-connecting</string>
    <string name="unable_connect_to_camera_cmd">Unable to connect to camera,please Retry</string>
    <string name="hint_capture_failed">Failed to take a snapshot</string>
    <string name="hint_start_record_failed">Failed to start record</string>
    <string name="hint_stop_record_failed">Failed to stop record</string>
    <string name="hint_start_capture">Start Capture</string>
    <string name="hint_capture_complete">Capture Complete</string>
    <string name="hint_start_record">Start Record</string>
    <string name="hint_stop_record">Stop Record</string>
    <string name="hint_initializing_mixing_data">Initializing…</string>
    <string name="hint_sd_exception">SD card error, repairing...</string>
    <string name="key_lock_hint_main">Key Locked\nToggle TakeOff/Landing to unlock</string>
    <string name="select_fpv_model">Select a model first\nor\n Create a new model</string>
    <string name="dialog_importing_model">Initializing</string>
    <string name="fmode_option_1">Option 1:</string>
    <string name="fmode_option_2">Option 2:</string>
    <string name="fmode_option_3">Option 3:</string>
    <string name="fmode_6axis">6-Axis</string>
    <string name="fmode_speed">Speed</string>
    <string name="fmode_pressure">Pressure</string>
    <string name="fmode_smart">Smart</string>
    <string name="fmode_gohome">Go-Home</string>
    <string name="str_exit_warning_title">WARNING!!!</string>
    <string name="str_exit_warning_message">Exiting Flight Data Telemetry Screen Will Disconnect You from Aircraft! Are You Sure You Want to Exit?</string>
    <string name="str_exit_warning_message2">Entering camera and other settings, telemetry will be paused!</string>
    <string name="str_connect_status">RC : Connecting…\nVideo WIFI : Connecting…</string>
    <string name="str_connect_fsk_completed">RC : Completed!\nVideo WIFI : Connecting…</string>
    <string name="str_connect_wifi_completed">RC : Connecting…\nVideo WIFI : Completed!</string>
    <string name="str_connect_all_completed">RC : Completed!\nVideo WIFI : Completed!</string>
    <string name="str_warning_voltage_low1">Aircraft Battery Voltage Low!\nAlert: Maximum Height Decreased to 60 meters / 197 feet.</string>
    <string name="str_warning_voltage_low2">Aircraft Battery Voltage Critically Low! Land Immediately.\nAlert: Home Mode Will Land Directly Above Current Location.</string>
    <string name="str_warning_gps_disabled">GPS Disabled!\n(Maintain Manual Flight)</string>
    <string name="str_warning_gps_lost">GPS Lost!\n(Maintain Manual Flight)</string>
    <string name="str_warning_airport">Warning No Fly Zone, please contact CS@Yuneec.com and provide the following GPS Coordinates to dispute this location or suggest no fly zones.</string>
    <string name="str_warning_altitude">Alert: Aircraft Unable to Fly At or Above 8,000 Feet MSL.</string>
    <string name="str_status_good">Ready</string>
    <string name="str_status_acquiring">Acquiring</string>
    <string name="str_status_disabled">Disabled</string>
    <string name="str_status_warning">Warning</string>
    <string name="str_rln_48f_icon">48</string>
    <string name="str_rln_50f_icon">50</string>
    <string name="str_rln_60f_icon">60</string>
    <string name="str_rln_48f">1080p-48FPS</string>
    <string name="str_rln_50f">1080p-50FPS</string>
    <string name="str_rln_60f">1080p-60FPS</string>
    <string name="set_rln_failed">Failed to set resolution</string>
    <string name="str_connect_failed">Failed to communicated</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_confirm_select_mode_message">Are you sure you select this mode?\nIf confirmed, you should restart the device to enable the mode.</string>
    <string name="time_setting_duration">Duration</string>
    <string name="time_setting_style">Style</string>
    <string name="time_setting_warn">Warning</string>
    <string name="time_setting_trigger">Trigger</string>
    <string name="time_setting_title_hour">H</string>
    <string name="time_setting_title_minute">M</string>
    <string name="time_setting_title_second">S</string>
    <string name="time_setting_done">Done</string>
    <string name="counter_format_time">%1$02d:%2$02d:%3$02d</string>
    <string name="str_mi_bind">Bind</string>
    <string name="str_mi_channel_settings">Channel Settings</string>
    <string name="str_mi_switch_select">Switch Select</string>
    <string name="str_mi_camera_select">Camera Select</string>
    <string name="str_mi_quick_review">Quick Review</string>
    <string name="str_mi_online_picture">Online Picture</string>
    <string name="str_mi_mode_select">Mode Select</string>
    <string name="str_mi_hardware_monitor">Hardware Monitor</string>
    <string name="str_mi_other_settings">Other Settings</string>
    <string name="str_mi_flight_control_test">Flight Control Test</string>
    <string name="str_bind_refresh">Refresh</string>
    <string name="str_bind_reset">Reset</string>
    <string name="str_bind_bind">Bind</string>
    <string name="str_bind_model">Model</string>
    <string name="str_bind_camera">Camera</string>
    <string name="str_select_model_general">Select a Model first</string>
    <string name="str_go_to_model_select">Go to Model Select</string>
    <string name="str_bind_list_header_not_connected">Not connected</string>
    <string name="str_bind_connect_wifi_fail">Failed to connect WiFi</string>
    <string name="str_bind_connect_wifi_no_select">Please select WiFi AP</string>
    <string name="str_bind_rx_create_model">Create</string>
    <string name="str_bind_rx_not_match_title">Receiver incompatible with Model</string>
    <string name="str_bind_rx_incompatibility_title">Receiver not Supported</string>
    <string name="str_unit_switch_title">Unit switch:</string>
    <string name="str_unit_switch_metric">Metric</string>
    <string name="str_unit_switch_imperial">Imperial</string>
    <string name="step_1_title">Step 1 : Reading version number of Transmitter</string>
    <string name="step_2_title">Step 2 : Reading version number of Radio</string>
    <string name="step_3_title">Step 3 : Calibration</string>
    <string name="m4_version_title">Transmitter Version:</string>
    <string name="ti_version_title">Radio Version:</string>
    <string name="str_read">Read</string>
    <string name="str_fail">FAIL</string>
    <string name="choose_tx">Choose Tx File</string>
    <string name="choose_rf">Choose Rf File</string>
    <string name="no_tx">No TX File was Selected</string>
    <string name="no_rf">No RF File was Selected</string>
    <string name="update_tx">Update TX</string>
    <string name="update_rf">Update RF</string>
    <string name="settings_resolution">Video Settings</string>
    <string name="settings_audio">Audio Switch</string>
    <string name="settings_photo_format">Photo Mode</string>
    <string name="settings_iq_type">Image Style</string>
    <string name="settings_reset">Reset Camera</string>
    <string name="str_gps">GPS</string>
    <string name="calibration">Calibration</string>
    <string name="camera">Camera</string>
    <string name="multicopter">MultiCopter</string>
</resources>