<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="5dp">
    <TextView android:textSize="@dimen/large_font_size" android:textStyle="bold" android:textColor="#ffcc00" android:id="@+id/step_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/step_1_title" />
    <TextView android:textSize="@dimen/large_font_size" android:id="@+id/m4_version_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/m4_version_title" android:layout_below="@+id/step_1" />
    <TextView android:textSize="@dimen/large_font_size" android:textColor="#ff0000" android:id="@+id/m4_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_toRightOf="@+id/m4_version_id" android:layout_alignBottom="@+id/m4_version_id" />
    <Button android:id="@+id/m4_read" android:layout_width="UNKNOWN_DATA_0x7801" android:layout_height="UNKNOWN_DATA_0x2801" android:layout_marginTop="5dp" android:text="@string/str_read" android:layout_below="@+id/m4_version_id" style="@style/text_medium_style" />
    <TextView android:textSize="@dimen/large_font_size" android:textStyle="bold" android:textColor="#ffcc00" android:id="@+id/step_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/step_2_title" android:layout_below="@+id/m4_read" />
    <TextView android:textSize="@dimen/large_font_size" android:id="@+id/ti_version_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/ti_version_title" android:layout_below="@+id/step_2" />
    <TextView android:textSize="@dimen/large_font_size" android:textColor="#ff0000" android:id="@+id/ti_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_toRightOf="@+id/ti_version_id" android:layout_alignBottom="@+id/ti_version_id" />
    <Button android:id="@+id/ti_read" android:layout_width="UNKNOWN_DATA_0x7801" android:layout_height="UNKNOWN_DATA_0x2801" android:layout_marginTop="5dp" android:text="@string/str_read" android:layout_below="@+id/ti_version_id" style="@style/text_medium_style" />
    <Button android:id="@+id/page1_next" android:layout_width="UNKNOWN_DATA_0x7801" android:layout_height="UNKNOWN_DATA_0x2801" android:layout_marginRight="10dp" android:layout_marginBottom="10dp" android:text="@string/str_next" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" style="@style/text_medium_style" />
</RelativeLayout>
