<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.yuneec.widget.StatusbarView android:id="@+id/statusbar_of_other_settings" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x7f0d0006" android:layout_alignParentTop="true" />
    <RelativeLayout android:background="@drawable/activity_background" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/statusbar_of_other_settings">
        <TextView android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@+id/unit_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="10dp" android:text="@string/str_unit_switch_title" style="@style/text_large_style" />
        <Switch android:id="@+id/unit_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:textOn="@string/str_unit_switch_imperial" android:textOff="@string/str_unit_switch_metric" android:thumb="@drawable/switchbutton_thumb" android:layout_below="@+id/unit_title" android:track="@drawable/trim_group_bg" android:thumbTextPadding="8dp" />
    </RelativeLayout>
</RelativeLayout>
